src/components/ChatApp/Settings/Settings.css
#subheading {
    font-size: 24px;
    font-weight: 100;
    margin: 20px auto;
    max-width: 880px;
    text-align: center;
    font-family: 'Roboto', sans-serif;
}

.table {
  position: relative;
  left: 15%;
  margin-top: 30px;
  width: 434px;
}

.twitterIcon{
  right: 5px;
}

.tabStyle{
  height: auto;
  margin-top: 20px;
  display: inline-block;
}

.settings-container-light{
  width: 100%;
  height: 100vh;
  background: rgb(242, 242, 242);
}

.settings-container-dark{
  width: 100%;
  height: 100vh;
  background: rgb(0,0,18);
}

.settings-list{
    margin-bottom: 145px;
    padding: 0px 0px;
    user-select: none;
    width: 100%;
}


.settings-list-dropdown{
    padding: 0px 0px;
    user-select: none;
    width: 100%;
    display: none;
}

.siteTitle {
    height: 25px;
    margin-top: 21px;
    display: block;
}

.settingsMenuButton {
    margin-bottom: 16px;
    width: 100;
}

.settingsBtns {
  top: 5px;
  margin-left: 20px ;
}

.settingsComponents{
    width: 75%;
    margin-top: 80px;
}

.image-div{
    margin-top:-40px;	
}

.colorPicker{
    margin-left: 50px;
    margin-top: -35px;
}

.colorPicker>div>div {
    width: 90px !important; /* csslint allow: known-properties, important */
}

.color-box{
    display: inline-block;
    width: 23px;
    height: 23px;
    border-radius: 3px;
    border: 1px solid #0000006e;
    cursor: pointer;
    margin-right: 10px;
    margin-bottom: -8px;
}

.settings-toggle {
  max-width: 5%;
  float: right;
}

.settingsSubmit{
      text-align: left ;
      margin-left: 30px;
      margin-bottom: 16px;
}

.setting-item{
  width: 100%;
}

.Link a {
  color : #1DA1F5;
  text-decoration : none;
}

.settingMenu {

    max-width: none;
    padding: 50px 0px 50px 0px;
    position: relative;
    -webkit-box-align: center;
    -ms-flex-align: center;
    display: -ms-flexbox;
    display: -webkit-box;
    display: flex;
    -ms-flex-pack: justify;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-flow: row wrap;
    flex-flow: row wrap;
    -webkit-box-pack: justify;
    justify-content: space-between;
    margin: 0 auto;
    max-width: 85%;
    width: 935px;
}

.leftMenu {
  width: 35%;
  background-color: #fff;
  height: 500px;
  overflow: hidden;
}

.rightMenu {
  width: 64%;
  background-color: #fff;
}

.break-line-light{
  margin: 0px ;
  width: 100% ;
  height: 1px ;
  border: 0 none ;
  background-color : rgb(242, 242, 242) ;
}

.break-line-dark{
  margin: 0px ;
  width: 100% ;
  height: 1px ;
  border: 0 none ;
  background-color : white ;
}

.right-chevron{
  margin-top: 10px;
  position: absolute;
  right: 10px;
}

.email-field:hover{
    cursor: not-allowed;
}


@media only screen and (max-width: 1060px){
  .settings-list-dropdown{
    display: inline-block;
  }

  .settings-list{
    display: none;
  }

  .settings-container{
    height: 100vh;
  }

  .leftMenu {
    width: 100%;
    height: auto;
  }

  .tabStyle{
    height: auto;
  }

  .rightMenu {
    height: auto;
    width: 100%;
  }

  .setting-item{
  width: 100%;
}
}

@media screen and (max-width: 500px) {
  .speechSettingDiv {
    width: 70%;
  }
}

